--- a/index.html
+++ b/index.html
@@ -7,8 +7,216 @@
 
     <!-- CSS Link -->
     <link rel="stylesheet" href="./css/style.css" />
+
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/bc0e63a317.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>Dashboard</h1>
+    <div class="container">
+      <div class="dashboard__side">
+        <div class="dashboard-title-logo">
+          <i class="fa-solid fa-table-columns"></i>
+          <h1 class="dashboard__title">Dashboard</h1>
+        </div>
+        <nav class="nav">
+          <ul class="nav__link">
+            <li class="nav__link-list">
+              <i class="fa-solid fa-house"></i>
+              <a href="#" class="nav__link-anchor">home</a>
+            </li>
+            <li class="nav__link-list">
+              <i class="fa-solid fa-address-card"></i>
+              <a href="#" class="nav__link-anchor">profile</a>
+            </li>
+            <li class="nav__link-list">
+              <i class="fa-solid fa-message"></i>
+              <a href="#" class="nav__link-anchor">messages</a>
+            </li>
+            <li class="nav__link-list">
+              <i class="fa-solid fa-clock"></i>
+              <a href="#" class="nav__link-anchor">history</a>
+            </li>
+            <li class="nav__link-list">
+              <i class="fa-solid fa-scroll"></i>
+              <a href="#" class="nav__link-anchor">tasks</a>
+            </li>
+            <li class="nav__link-list">
+              <i class="fa-solid fa-people-group"></i>
+              <a href="#" class="nav__link-anchor">communities</a>
+            </li>
+          </ul>
+          <ul class="nav__link2">
+            <li class="nav__link2-list">
+              <i class="fa-solid fa-gear"></i>
+              <a href="#" class="nav__link2-anchor">settings</a>
+            </li>
+            <li class="nav__link2-list">
+              <i class="fa-solid fa-circle-question"></i>
+              <a href="#" class="nav__link2-anchor">support</a>
+            </li>
+            <li class="nav__link2-list">
+              <i class="fa-solid fa-lock"></i>
+              <a href="#" class="nav__link2-anchor">privacy</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <!-- Header -->
+      <div class="header">
+        <div class="search-icons">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <input type="text" />
+          <div class="icon-name">
+            <i class="fa-solid fa-bell"></i>
+            <i class="fa-solid fa-face-grin-wink"></i>
+            <p class="user-name">Morgan Oakley</p>
+          </div>
+        </div>
+        <div class="button-row">
+          <i class="fa-solid fa-face-grin-wink"></i>
+          <div>
+            <p class="greeting">Hi There!</p>
+            <p class="user-name">Morgan Oakley (@morgan)</p>
+          </div>
+          <div class="user-cta">
+            <button class="user-btn">New</button>
+            <button class="user-btn">Upload</button>
+            <button class="user-btn">Share</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Main  -->
+      <div class="main-page-titles">
+        <p class="projects-title">Your Projects</p>
+        <p class="anouncements-title">Anouncements</p>
+      </div>
+
+      <article class="main__content">
+        <div class="card">
+          <h2 class="card__title">Super Cool Project</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Necessitatibus atque repellat alias commodi maiores ducimus?
+          </p>
+          <div class="main-icons">
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-eye"></i>
+            <i class="fa-solid fa-code-merge"></i>
+          </div>
+        </div>
+        <div class="card">
+          <h2 class="card__title">Less Cool Project</h2>
+          <p>
+            Nisi laboriosam eaque asperiores quibusdam officiis magni autem ea
+            eligendi facere nesciunt, magnam ducimus porro.
+          </p>
+          <div class="main-icons">
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-eye"></i>
+            <i class="fa-solid fa-code-merge"></i>
+          </div>
+        </div>
+        <div class="card">
+          <h2 class="card__title">Impossible App</h2>
+          <p>
+            Distinctio deserunt doloremque officiis nihil at ex mollitia
+            perferendis quos rem, pariatur consectetur suscipit ullam.
+          </p>
+          <div class="main-icons">
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-eye"></i>
+            <i class="fa-solid fa-code-merge"></i>
+          </div>
+        </div>
+        <div class="card">
+          <h2 class="card__title">Easy Peasy App</h2>
+          <p>
+            Exercitationem aliquam fugit dolor necessitatibus. Inventore tenetur
+            laudantium odio corporis aspernatur quos aliquam maiores ipsa.
+          </p>
+          <div class="main-icons">
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-eye"></i>
+            <i class="fa-solid fa-code-merge"></i>
+          </div>
+        </div>
+        <div class="card">
+          <h2 class="card__title">Ad Blocker</h2>
+          <p>
+            Odio animi corporis facere ullam quo ad nemo perspiciatis ratione
+            sequi saepe! Aliquid, commodi omnis.
+          </p>
+          <div class="main-icons">
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-eye"></i>
+            <i class="fa-solid fa-code-merge"></i>
+          </div>
+        </div>
+        <div class="card">
+          <h2 class="card__title">Money Maker</h2>
+          <p>
+            Qui blanditiis eum incidunt. Numquam consequatur unde illo odit
+            necessitatibus praesentium nesciunt dolorem temporibus voluptas.
+          </p>
+          <div class="main-icons">
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-eye"></i>
+            <i class="fa-solid fa-code-merge"></i>
+          </div>
+        </div>
+      </article>
+
+      <aside class="maintenance">
+        <div class="maintenance-card">
+          <p class="site-maintenance">Site Maintenance</p>
+          <p>
+            Assumenda perspiciatis facilis tempore exercitationem non
+            praesentium labore doloribus cupiditate?
+          </p>
+          <div class="underline-main"></div>
+          <p class="site-maintenance">Community Share Day</p>
+          <p>
+            Assumenda perspiciatis facilis tempore exercitationem non
+            praesentium labore doloribus cupiditate?
+          </p>
+          <div class="underline-main"></div>
+          <p class="site-maintenance">Updated Privacy Policy</p>
+          <p>
+            Assumenda perspiciatis facilis tempore exercitationem non
+            praesentium labore doloribus cupiditate?
+          </p>
+        </div>
+        <div class="trending">
+          <h2 class="anounce-trending">Trending</h2>
+        </div>
+
+        <!-- <div class="maintenance-card">
+          <div>
+            <i class="fa-solid fa-face-angry"></i>
+            <i class="fa-solid fa-face-grin-wink"></i>
+            <i class="fa-regular fa-face-grin-tears"></i>
+            <i class="fa-solid fa-skull"></i>
+          </div>
+        </div> -->
+
+        <div class="maintenance-card">
+          <ul>
+            <li><i class="fa-solid fa-face-angry"></i>@grossman</li>
+
+            <li><i class="fa-solid fa-face-grin-wink"></i>@pellican</li>
+            <li><i class="fa-regular fa-face-grin-tears"></i>@rollin</li>
+            <!-- <li><i class="fa-solid fa-skull"></i>@gumbo</li> -->
+          </ul>
+        </div>
+      </aside>
+    </div>
+
+    <!-- JS Link -->
+    <script src="./js/app.js"></script>
   </body>
 </html>
