User icons added. CSS to contain elements

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
           <div class="icon-name">
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-face-grin-wink"></i>
-            <p class="user-name">Morgan Oakley</p>
+            <p class="user-name">Samuel Cage</p>
           </div>
         </div>
         <div class="button-row">
           <i class="fa-solid fa-face-grin-wink"></i>
           <div>
             <p class="greeting">Hi There!</p>
-            <p class="user-name">Morgan Oakley (@morgan)</p>
+            <p class="user-name">Samuel Cage (@samuel)</p>
           </div>
           <div class="user-cta">
             <button class="user-btn">New</button>
@@ -179,13 +179,13 @@
             praesentium labore doloribus cupiditate?
           </p>
           <div class="underline-main"></div>
-          <p class="site-maintenance">Community Share Day</p>
+          <p class="community">Community Share Day</p>
           <p>
             Assumenda perspiciatis facilis tempore exercitationem non
             praesentium labore doloribus cupiditate?
           </p>
           <div class="underline-main"></div>
-          <p class="site-maintenance">Updated Privacy Policy</p>
+          <p class="policy">Updated Privacy Policy</p>
           <p>
             Assumenda perspiciatis facilis tempore exercitationem non
             praesentium labore doloribus cupiditate?
@@ -206,11 +206,23 @@
 
         <div class="maintenance-card">
           <ul>
-            <li><i class="fa-solid fa-face-angry"></i>@grossman</li>
+            <li>
+              <i class="fa-solid fa-face-angry"></i>
+              <p>@grossman</p>
+            </li>
 
-            <li><i class="fa-solid fa-face-grin-wink"></i>@pellican</li>
-            <li><i class="fa-regular fa-face-grin-tears"></i>@rollin</li>
-            <!-- <li><i class="fa-solid fa-skull"></i>@gumbo</li> -->
+            <li>
+              <i class="fa-solid fa-face-grin-wink"></i>
+              <p>@samuel</p>
+            </li>
+            <li>
+              <i class="fa-regular fa-face-grin-tears"></i>
+              <p>@rollin</p>
+            </li>
+            <li>
+              <i class="fa-solid fa-skull"></i>
+              <p>@gumbo</p>
+            </li>
           </ul>
         </div>
       </aside>
